--- a/_includes/wechat.html
+++ b/_includes/wechat.html
@@ -1,2 +1,2 @@
-<p align="center">微信公众号：诗之歌博客或shizhigeblog <br> <img src="{{ "/static/wechat.jpg" | prepend: site.baseurl }}" alt="扫一扫用微信订阅！"></p>
+<p align="center">微信公众号：诗之文 <br> <img src="{{ "/static/wechat.jpg" | prepend: site.baseurl }}" alt="扫一扫用微信订阅！"></p>
 
