--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,5 +6,10 @@
       <div class="copy">
           {{ site.time | date: '%Y' }} &copy; {{ site.title }}
       </div>
+      <div class="site-info">
+        Powered by <a href="https://jekyllrb.com/">Jekyll</a>
+        Hosted on <a href="https://coding.net/">Coding</a> and <a href="https://github.com/">Github</a>
+        <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">RSS</a>
+      </div>
   </div>
 </footer>
