--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
   </header>
   <div class="post-content" itemprop="articleBody">
     {{ content }}
-    <p>（完）</p>
+    <p><strong>版权声明：</strong>自由转载-保持署名-非商业性使用-禁止演绎（<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh">创意共享4.0许可证</a>）</p>
     {% include wechat.html %}
   </div>
   <footer class="post-footer">
