--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
 <footer class="site-footer">
   <div class="wrapper">
       <div class="copy">
-          {{ site.time | date: '%Y' }} &copy; {{ site.title }}
+        {{ site.time | date: '%Y' }} &copy; {{ site.title }}
+        &nbsp;&nbsp;Powered by <a href="https://jekyllrb.com/">Jekyll</a>
+        &nbsp;Hosted on <a href="https://coding.net/">Coding</a> and <a href="https://github.com/">Github</a>.
       </div>
       <div class="site-info">
-        Powered by <a href="https://jekyllrb.com/">Jekyll</a>
-        Hosted on <a href="https://coding.net/">Coding</a> and <a href="https://github.com/">Github</a>
         <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">RSS</a>
       </div>
   </div>
