--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ layout: default
             <span itemprop="name">{{ page.author }}</span>
           </span>
        {% endif %}
+       {% include share.html %}
     </p>
   </header>
   <div class="post-content" itemprop="articleBody">
