--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -149,9 +149,9 @@
     font-size: $small-font-size;
     color: $grey-color;
 }
-.bdsharebuttonbox{
+/*.bdsharebuttonbox{
     float: right;
-}
+}*/
 
 .post-link {
     display: block;
