--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,3 +1,23 @@
+
+{% if site.gitalk.enable %}
+    {% if site.gitalk.distractionFreeMode  %}      
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+  	  <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+      <script type="text/javascript">
+          var gitalk = new Gitalk({
+            clientID:  '{{site.gitalk.clientID}}', 
+            clientSecret: '{{site.gitalk.clientSecret}}',
+            id: window.location.pathname,
+            repo: '{{site.gitalk.repo}}', 
+            owner: '{{site.gitalk.owner}}', 
+            admin: '{{site.gitalk.admin}}', 
+            distractionFreeMode: '{{site.gitalk.distractionFreeMode}}',
+          })
+          gitalk.render('gitalk-container')
+      </script>
+    {% endif %}
+{% endif %}
+
 {% if site.duoshuo_username %}
 <!-- 多说评论框 start -->
     <div class="ds-thread" data-thread-key="{{ site.baseurl }}{{ post.url }}" data-title="{{ page.title }}" data-url="{{ site.baseurl }}{{ post.url }}"></div>
