--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -7,7 +7,7 @@
           var gitalk = new Gitalk({
             clientID:  '{{site.gitalk.clientID}}', 
             clientSecret: '{{site.gitalk.clientSecret}}',
-            id: window.location.pathname,
+            id: location.pathname,
             repo: '{{site.gitalk.repo}}', 
             owner: '{{site.gitalk.owner}}', 
             admin: '{{site.gitalk.admin}}', 
