--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,21 +5,23 @@ layout: default
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
+        作者：诗之文&nbsp;&nbsp;
        <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-          {{ page.date | date: "%b %-d, %Y" }}
+          日期：{{ page.date | date: "%Y-%m-%d" }}&nbsp;&nbsp;
        </time>
-       {% if page.author %} |
+       分类：{{ page.category }}
+       <!-- {% if page.author %} |
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span itemprop="name">{{ page.author }}</span>
           </span>
-       {% endif %}
-       {% include share.html %}
+       {% endif %} -->
     </p>
   </header>
   <div class="post-content" itemprop="articleBody">
-    {{ content }}
-    <br />
     <p><strong>版权声明：</strong>自由转载-保持署名-非商业性使用-禁止演绎（<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh">创意共享4.0许可证</a>）</p>
+    <br />
+    {{ content }}
+    <p>（完）</p>
     {% include wechat.html %}
   </div>
   <footer class="post-footer">
@@ -28,7 +30,7 @@ layout: default
       {% if page.previous.url %}<a class="prev" href="{{ page.previous.url | prepend: site.baseurl }}">{{ page.previous.title }}&nbsp;→</a>{% endif %}
       {% if page.next.url %}<a class="next" href="{{ page.next.url | prepend: site.baseurl }}">←&nbsp;{{ page.next.title }}</a>{% endif %}
     </div>
-      
+      {% include related-posts.html %}
       {% include comment.html %}
   </footer>
 </article>
