--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="copy">
         {{ site.time | date: '%Y' }} &copy; {{ site.title }}
         &nbsp;&nbsp;Powered by <a href="https://jekyllrb.com/">Jekyll</a>
-        &nbsp;Hosted on <a href="https://coding.net/">Coding</a> and <a href="https://github.com/">Github</a>
+        &nbsp;Hosted on <a href="https://github.com/">Github</a>
       </div>
       <div class="site-info">
         <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">RSS</a>
