--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,6 +1,7 @@
 
 {% if site.gitalk.enable %}
-    {% if site.gitalk.distractionFreeMode  %}      
+    {% if site.gitalk.distractionFreeMode  %} 
+      <div id="gitalk-container"></div>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
   	  <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
       <script type="text/javascript">
