--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -4,7 +4,7 @@
       <div id="gitalk-container"></div>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
   	  <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
-      <script src="{{ "/css/md5.min.js" | prepend: site.baseurl }}"></script>
+      <script src="{{ "/static/js/md5.min.js" | prepend: site.baseurl }}"></script>
       <script type="text/javascript">
           var gitalk = new Gitalk({
             clientID:  '{{site.gitalk.clientID}}', 
