--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -9,7 +9,7 @@
           var gitalk = new Gitalk({
             clientID:  '{{site.gitalk.clientID}}', 
             clientSecret: '{{site.gitalk.clientSecret}}',
-            id: location.href,
+            id: md5(location.pathname),
             repo: '{{site.gitalk.repo}}', 
             owner: '{{site.gitalk.owner}}', 
             admin: '{{site.gitalk.admin}}', 
